Fixed height and overlapping issue on stage cards

--- a/src/styles/_stages.scss
+++ b/src/styles/_stages.scss
@@ -21,7 +21,7 @@
   background-color: rgba(46, 46, 46, 0.3);
   background-blend-mode: darken;
   background-size: cover;
-  border-radius: 15px;
+  border-radius: 20px;
   color: white;
   display: flex;
   flex-direction: column;
